# core

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml
.github/workflows/: ci.yml  pr-check.yml  publish.yml
crates/postcrate-ci/: Cargo.toml
crates/postcrate-ci/src/: main.rs
crates/postcrate-core/: Cargo.toml
crates/postcrate-core/examples/: embed.rs  send_test.rs
crates/postcrate-core/src/: config.rs  error.rs  events.rs  lib.rs  matcher.rs  recording.rs  service.rs  tagging.rs
crates/postcrate-core/src/db/: attachments.rs  audit.rs  bounce_rules.rs  chaos_configs.rs  emails.rs  forwarding.rs  mailboxes.rs  migrate.rs  mod.rs  pool.rs  settings.rs  webhooks.rs
crates/postcrate-core/src/db/migrations/: 0001_init.sql  0002_fts.sql  0003_audit.sql  0004_fts_email_id.sql  0005_email_flags.sql  0006_email_tag.sql  0007_webhooks.sql  0008_forwarding.sql  0009_implicit_tls.sql  0010_mailbox_paused.sql
crates/postcrate-core/src/http/: auth.rs  dto.rs  error.rs  mod.rs
crates/postcrate-core/src/http/routes/: audit.rs  bounces.rs  chaos.rs  emails.rs  events.rs  health.rs  mailboxes.rs  mailtrap.rs  mod.rs  recording.rs  rendering.rs  scenarios.rs  wait.rs  webhooks.rs
crates/postcrate-core/src/mail/: address.rs  headers.rs  mod.rs  parse.rs
crates/postcrate-core/src/mailbox/: kinds.rs  lifecycle.rs  mod.rs  ports.rs  service.rs
crates/postcrate-core/src/pipeline/: forwarding.rs  ingest.rs  mod.rs  retention.rs  webhooks.rs
crates/postcrate-core/src/rendering/: a11y.rs  lint.rs  mod.rs  profile.rs
crates/postcrate-core/src/scenarios/: auth.rs  links.rs  list_unsub.rs  mod.rs  spam.rs
crates/postcrate-core/src/smtp/: bounce.rs  chaos.rs  codec.rs  command.rs  data_reader.rs  extensions.rs  listener.rs  mod.rs  relay.rs  response.rs  session.rs  tls.rs
crates/postcrate-core/tests/: fts_search.rs  http_api.rs  http_auth.rs  mime_fixtures.rs  pin_star_note.rs  recording.rs  release_email.rs  rfc5321_conformance.rs  smtp_auth.rs  smtp_extensions.rs  smtp_happy_path.rs  sse_events.rs  starttls.rs  stress.rs  wait_for_email.rs  webhook_and_forward.rs
crates/postcrate-core/tests/common/: mod.rs
crates/postcrate-core/tests/fixtures/mime/: filename_star_encoded.eml  multipart_alternative.eml  multipart_mixed_attachment.eml  multipart_related_cid.eml  rfc2047_subject.eml  utf8_subject.eml
crates/postcrate-core/tests/rfc5321/: bad_sequence.txt  dot_stuffing.txt  happy_path.txt  helo_legacy.txt  noop_help.txt  null_sender.txt  quoted_local_part.txt  rset_mid_transaction.txt
crates/postcrate-server/: Cargo.toml
crates/postcrate-server/src/: main.rs
docs/: ARCHITECTURE.md  EMBEDDING.md  HTTP_API.md  SMTP_EXTENSIONS.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: mail_parse.rs  smtp_command.rs  smtp_path.rs
scripts/: release.sh
tests/clients/: go_net_smtp.go  go_net_smtp.go.sh  node_nodemailer.js  python_smtplib.py  run-all.sh  swaks.sh
