[workspace]
resolver = "2"
members = [
    "crates/postcrate-core",
    "crates/postcrate-server",
    "crates/postcrate-ci",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MIT"
authors = ["Postcrate authors"]
repository = "https://github.com/postcrate/postcrate-core"
homepage = "https://postcrate.dev"
readme = "README.md"

[workspace.dependencies]
postcrate-core = { path = "crates/postcrate-core", version = "0.1.0" }

tokio = { version = "1.41", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "io-util",
    "sync",
    "time",
    "fs",
    "signal",
] }
tokio-util = { version = "0.7", features = ["codec", "io", "rt"] }
bytes = "1.8"
futures-util = "0.3"
async-trait = "0.1"

axum = { version = "0.8", features = ["macros", "json", "tokio", "http1"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "limit", "timeout"] }
http = "1"

sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
    "json",
    "chrono",
] }

mail-parser = "0.11"

thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
parking_lot = "0.12"
arc-swap = "1.7"

clap = { version = "4.5", features = ["derive", "env"] }
rand = "0.8"
rand_chacha = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Deferred (architected for, but not enabled until the TLS phase):
# tokio-rustls = "0.26"
# rustls-pemfile = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = 1
