[package]
name = "postcrate-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Mailpit-grade SMTP capture engine: server, multi-mailbox lifecycle, chaos simulation, SQLite persistence, HTTP API."

[lib]
name = "postcrate_core"
path = "src/lib.rs"

[features]
default = []
# Enables STARTTLS in the SMTP session loop. When off, STARTTLS is
# never advertised in EHLO and the command replies 502.
tls = ["dep:tokio-rustls", "dep:rustls-pemfile"]

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }

sqlx = { workspace = true }

mail-parser = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
arc-swap = { workspace = true }

rand = { workspace = true }
rand_chacha = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }

tokio-rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["test-util", "process"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
tempfile = "3"
rcgen = "0.13"

