[package]
name = "postcrate-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Mailpit-style headless SMTP capture server, powered by postcrate-core."

[[bin]]
name = "postcrate"
path = "src/main.rs"

[dependencies]
postcrate-core = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
